# llm-eval-ci

./: .gitignore  Dockerfile  Makefile  README.md  ci.yml  manage.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  main.yml
core/: forms.py  models.py  percentcenter_obj.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_alter_bizneed_deliveryproduct.py
core/templates/: bizneed.html  bizneed_update.html  business_update.html  businesslist.html  businessobjective.html  listall.html  listbizneed.html  main.html  profitcenter.html  update.html
core/templates/register/: login.html  register.html
llm-eval-real/: pyproject.toml
llm-eval-real/src/: eval_cli.py  metrics.py
llm-eval-real/src/backends/: hf_backend.py  sklearn_backend.py
llm-eval-real/src/data/: sentiment_dev.jsonl
llm-eval-real/tests/: test_eval.py
pasers/: asgi.py  settings.py  urls.py  wsgi.py
src/: run_once.py  runner.py
tests/: test_runner.py
tool-exec-service/: Dockerfile  README.md  pyproject.toml
tool-exec-service/src/: app.py
tool-exec-service/workspace/: test_util.py
workspace/: util.py
