[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-eval-ci-original"
version = "0.1.0"
description = "Original minimal evaluation template with a regex math baseline model"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
