[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-eval-real"
version = "0.1.0"
description = "Real evaluation project with Transformers and scikit-learn backends"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.2.0",
    "scikit-learn>=1.3.0",
    "numpy>=1.26.0",
    "transformers>=4.44.0",
    "torch>=2.2.0; platform_system!='Windows'",
    "tqdm>=4.66.0",
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
